testsuite/serd-tests/good/test-nt-syntax-blank-dot.nt
<http://example.org/s> <http://example.org/p> _:sparqley.blank .
