testsuite/serd-tests/bad/bad-nt-syntax-blank-u00F7.nt
<http://example.org/s> <http://example.org/p> _:in÷valid .
